# Mailing-Service

./: .env.sample  README.md  mailing_attempts_fixture.json  mailing_fixture.json  messages_fixture.json  pyproject.toml  recipients_fixture.json
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: add_test_data.py  runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: base.html  mailing_form.html  mailing_list.html  mailingattempt_list.html  message_form.html  message_list.html  recipient_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_test_users.py  csu.py
users/migrations/: 0001_initial.py
users/templates/password_reset/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
users/templates/users/: customuser_list.html
