[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["holdlemon <d.vajov2010@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
ipython = "^8.29.0"
pillow = "^11.0.0"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"
redis = "^5.2.0"
django-apscheduler = "^0.7.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
